--- a/notes/20150721.md
+++ b/notes/20150721.md
@@ -1,3 +1,114 @@
 <a href="http://www.businessinsider.com/simple-things-you-can-do-in-your-20s-to-prevent-regrets-in-your-30s-and-40s-2015-7?utm_content=buffer9def2&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer" target="_blank">http://www.businessinsider.com/simple-things-you-can-do-in-your-20s-to-prevent-regrets-in-your-30s-and-40s-2015-7?utm_content=buffer9def2&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer</a>
 
 Keyline Design Plugin
+
+<a href="http://nautil.us/blog/a-butterflys-beauty-comes-from-organized-chaos" target="_blank">http://nautil.us/blog/a-butterflys-beauty-comes-from-organized-chaos</a>
+
+<a href="https://agenda.weforum.org/2015/01/will-we-be-able-to-feel-things-on-the-internet/?utm_content=bufferf212b&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer" target="_blank">https://agenda.weforum.org/2015/01/will-we-be-able-to-feel-things-on-the-internet/?utm_content=bufferf212b&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer</a>
+
+---
+
+909 South West Willow Road, Maysville, Mo 64469
+
+---
+
+`gdal_translate -of GTiff -projwin 381000.0 4414500.0 382500.0 4413000.0 /home/phoenix/workspace/ost4sem/siteplan/data/raster/lidar/15_03814413.img "/home/phoenix/workspace/qgis/dem_farm_clipped.tif"`
+
+`gdal_contour -a ELEV -i 10 /home/phoenix/workspace/ost4sem/siteplan/data/raster/lidar/15_03814413.img "/home/phoenix/workspace/qgis/hedges.shp"`
+
+Contours > Open Attributes Table
+
+"ELEV" > 283
+
+Select grass
+
+`v.in.ogr dsn=/home/phoenix/workspace/qgis/treeline1.shp output=treeline1`
+
+
+---
+
+Profile Tool
+
+
+
+---
+
+v.in.ogr dsn=/home/phoenix/workspace/qgis/dem/treeline1.shp output=treeline1
+
+---
+
+Staff hotel
+
+Classroom structure
+
+Shop
+
+Storage
+
+Greenhouse
+
+---
+
+# Current Assessment & Issues
+
+Low Road is Flooding
+Roads are muddy
+No Roads or footpaths to the high points on the property
+Erosion
+Snow/Ice
+No path access to North East property
+No Barriers to keep certain Fauna in/out
+
+# Needs
+
+Maintenance
+Water Management
+Traction
+Stay clean
+Flat Surface
+Drainage
+Roads go on Ridges
+Access to all areas of the Property
+Walkways
+Access to Utilities
+Access for Agricultural Machinery
+Access for Vehicles to transport Agroforestry Products
+Access for emergency vehicles
+Zone 1-4 has regular Foot Access
+Consider Compaction
+Parking
+Access for Production Supplies/Machinery
+Large Vehicles need to Turn Around in certain spots
+Barriers around property to keep Fauna in/out
+Consider Storms/Fallen trees
+
+# Proposed Solutions
+
+Build Roads & Pathways on Ridges with gentle slopes
+Build Access to high ground
+Build a Swale to shield muddy low road
+Water Management & Drainage
+  Crown/slope the roads so puddles don't form
+  Drain water into swales & ponds
+  Large enough piping for water to pass underneath roads where applicable
+  Raise low roads above water table
+Gravel and/or pavement to increase traction & remove puddles/mud
+Build Barriers around property to keep fauna in/out
+Natural Deicing Solutions
+Improve soil retention/drainage of water
+Reduce runoff
+Bind Pipes/Electrical units together
+  Well marked
+  Close to road
+Parking
+Road Parking
+Golf Cart/Buggy for local transport
+
+# Timeline
+
+Access to perform earthworks
+Build Water Management & Drainage
+  Address South Road Flooding
+Forestry Access
+Agricultural Access
+Pathways to remaining areas on the property
