--- a/notes/20150804.md
+++ b/notes/20150804.md
@@ -1,1 +1,34 @@
 <a href="http://www.businessinsider.com/climate-change-is-causing-food-shortages-2015-8?utm_content=buffer718ed&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer" target="_blank">http://www.businessinsider.com/climate-change-is-causing-food-shortages-2015-8?utm_content=buffer718ed&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer</a>
+
+<a href="http://www.businessinsider.com/your-chance-of-becoming-a-millionaire-depends-a-lot-on-your-age-2015-8?utm_content=buffer90515&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer" target="_blank">http://www.businessinsider.com/your-chance-of-becoming-a-millionaire-depends-a-lot-on-your-age-2015-8?utm_content=buffer90515&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer</a>
+
+<a href="http://www.elephantjournal.com/2014/03/before-we-fall-in-love-kristin-monk/" target="_blank">http://www.elephantjournal.com/2014/03/before-we-fall-in-love-kristin-monk/</a>
+
+<a href="http://www.elephantjournal.com/2015/05/why-our-morning-smoothies-can-make-us-fat-5-ways-to-tweak-em/" target="_blank">http://www.elephantjournal.com/2015/05/why-our-morning-smoothies-can-make-us-fat-5-ways-to-tweak-em/</a> 
+
+---
+
+You are activating the love inside of me.
+
+The universal love that is me. The spirit awakens within me. I am a receptive vessel & will shine the creative light to all creation.
+
+---
+
+<a href="https://www.youtube.com/watch?v=afx80q0DIG0" target="_blank">https://www.youtube.com/watch?v=afx80q0DIG0</a>
+
+<a href="http://www.businessinsider.com/a-former-army-sniper-shares-a-trick-for-staying-focused-2015-7?utm_content=buffer6da38&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer" target="_blank">http://www.businessinsider.com/a-former-army-sniper-shares-a-trick-for-staying-focused-2015-7?utm_content=buffer6da38&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer</a>
+ 
+ <a href="http://www.dose.com/lists/21893/15-Optical-Illusion-GIFs-Designed-To-Make-You-Feel-Like-A-Lunatic-ab630-1?utm_source=Facebook&utm_medium=WHFacebook&utm_campaign=fijifrost" target="_blank">http://www.dose.com/lists/21893/15-Optical-Illusion-GIFs-Designed-To-Make-You-Feel-Like-A-Lunatic-ab630-1?utm_source=Facebook&utm_medium=WHFacebook&utm_campaign=fijifrost</a>
+ 
+---
+
+Resistence to reality is the hallmark of suffering.
+
+---
+
+<a href="http://www.elephantjournal.com/2013/12/intimacy-monogamy-polyamory-keith-molyneaux/" target="_blank">http://www.elephantjournal.com/2013/12/intimacy-monogamy-polyamory-keith-molyneaux/</a>
+
+<a href="http://www.businessinsider.com/the-real-story-behind-one-of-the-most-shocking-images-of-wwii-2015-8?utm_content=buffer02e42&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer" target="_blank">http://www.businessinsider.com/the-real-story-behind-one-of-the-most-shocking-images-of-wwii-2015-8?utm_content=buffer02e42&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer</a>
+
+<a href="http://mashable.com/2015/08/04/cristiano-ronaldo-disguised/?utm_cid=mash-com-fb-main-link" target="_blank">http://mashable.com/2015/08/04/cristiano-ronaldo-disguised/?utm_cid=mash-com-fb-main-link</a>
+
