--- a/notes/20150818.md
+++ b/notes/20150818.md
@@ -9,3 +9,13 @@ Naomi Ruth
 <a href="http://www.elephantjournal.com/2015/06/forget-romance-give-me-a-stubborn-love/" target="_blank">http://www.elephantjournal.com/2015/06/forget-romance-give-me-a-stubborn-love/</a>
 
 <a href="http://goodmenproject.com/featured-content/im-falling-in-love-with-another-woman-alnpt/" target="_blank">http://goodmenproject.com/featured-content/im-falling-in-love-with-another-woman-alnpt/</a>
+
+<a href="http://www.bbc.com/news/science-environment-33867941" target="_blank">Robots learn to evolve and improve</a>
+
+<a href="http://globalreports.columbia.edu/blog/2015/08/why-chinas-economy-is-ok-but-chinas-government-is-not/" target="_blank">Why China's Economy is OK—but China's Government Is Not</a>
+
+<a href="https://queue.acm.org/detail.cfm?id=1117409" target="_blank">It Isn’t Your Father’s Realtime Anymore</a>
+
+<a href="http://www.filmsforaction.org/watch/the-one-simple-truth-about-our-existence-that-everyone-needs-to-know/" target="_blank">The One Simple Truth about Our Existence That Everyone Needs to Know</a>
+
+<a href="http://www.filmsforaction.org/watch/unveiled_and_lifted_feature_film_2013/" target="_blank">Unveiled & Lifted (2013)</a>
