--- a/notes/20150823.md
+++ b/notes/20150823.md
@@ -1,1 +1,53 @@
 <a href="http://www.businessinsider.com/mathematical-secret-to-lasting-relationships-2015-6?utm_content=buffer22b67&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer" target="_blank">A mathematical formula reveals the secret to lasting relationships</a>
+
+<a href="http://www.washingtonpost.com/news/wonkblog/wp/2014/10/18/poor-kids-who-do-everything-right-dont-do-better-than-rich-kids-who-do-everything-wrong/" target="_blank">Poor kids who do everything right don’t do better than rich kids who do everything wrong</a>
+
+<a href="http://bellabasia.tumblr.com/post/127129544721/it-was-easier-to-give-in-than-keep-running" target="_blank">It Was Easier to Give in Than Keep Running</a>
+
+<a href="http://dangerousminds.net/comments/the_sad_truth_nauseatingly_profound_illustrations_of_what_the_world_is_turn" target="_blank">THE SAD TRUTH: NAUSEATINGLY PROFOUND ILLUSTRATIONS OF WHAT THE WORLD IS TURNING INTO</a>
+
+<a href="https://www.facebook.com/notes/beth-ann-morrison/resignation/37442789020?pnref=lhc" target="_blank">Resignation</a>
+
+<a href="http://goodmenproject.com/featured-content/behaviors-will-get-dumped-hesaid/" target="_blank">Guys, You Need To Know These 7 Behaviors That Will Get You Dumped - See more at: http://goodmenproject.com/featured-content/behaviors-will-get-dumped-hesaid/#sthash.kExr4iFv.dpuf</a>
+
+<a href="http://www.businessinsider.com/rich-people-like-to-read-2015-8?utm_content=buffer32d7d&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer" target="_blank">A self-made millionaire who studied 1,200 wealthy people found they all have one — free — pastime in common</a>
+
+<a href="http://www.menshealth.com/sex-women/how-show-your-wife-you-love-her?cid=synd_the_good_men_project-pubexchange_facebook" target="_blank">4 Incredibly Easy Ways to Be an Awesome Husband, According to Married Women</a>
+
+<a href="http://goodmenproject.com/featured-content/why-shoulding-your-partner-wont-get-what-you-want-dg/" target="_blank">Why ‘Shoulding’ Your Partner Won’t Get What You Want</a>
+
+<a href="http://goodmenproject.com/featured-content/why-bad-timing-is-a-shtty-excuse-to-wait-for-something-better-kt/" target="_blank">Why Bad Timing is a Sh*tty Excuse to Wait for Something Better</a>
+
+<a href="http://www.filmsforaction.org/articles/the-greening-of-the-self/" target="_blank">The Greening of the Self: The Most Important Development of Modern Times</a>
+
+---
+
+I'm searching for home. Home is where the heart is.
+
+I'm searching for a place to rest my heart. I will go anywhere to find home.
+
+If you give me a home, I am yours. I want to create something beautiful with you.
+
+I want to heal the world with you. I want to have a child with you.
+
+I need you to go at your own pace, because I'm crazy. I will fall deeply, madly in love with you. The raging fire in me needs to be tempered by reality & grounded. If you need me to give you the gift of falling deeply, madly in love, I will give it to you. I will be what you need me to be. I will suffer the throes of death & birth because transcendence is the reward.
+
+---
+
+<a href="http://goodmenproject.com/featured-content/what-being-emotionally-unavailalbe-really-means-and-why-men-do-it-dg/" target="_blank">What Being Emotionally Unavailable Really Means and Why Men Do It</a>
+
+<a href="http://www.elephantjournal.com/2014/12/its-never-too-soon-to-say-i-love-you/" target="_blank">It’s Never too Soon to Say ‘I Love You.’</a>
+
+<a href="http://www.nydailynews.com/life-style/health/women-high-iqs-moms-study-article-1.1421592" target="_blank">Women with higher IQs are less likely to have kids, research suggests</a>
+
+<a href="http://www.theguardian.com/commentisfree/2013/aug/07/smart-women-not-having-kids" target="_blank">Should we care that smart women aren't having kids?</a>
+
+<a href="http://elitedaily.com/women/women-with-high-iq/1052300/" target="_blank">The Controversial Reasons Why Intelligent Women Aren’t Having Children</a>
+
+<a href="http://www.dailymail.co.uk/femail/article-2384787/Too-clever-mother-The-maternal-urge-decreases-QUARTER-15-extra-IQ-points.html" target="_blank">Are you too clever to be a mother? Maternal urge decreases by a QUARTER for every 15 extra IQ points</a>
+
+<a href="http://goodmenproject.com/featured-content/10-ways-to-turn-down-a-second-date/" target="_blank">10 Ways to Turn Down A Second Date</a>
+
+<a href="http://www.businessinsider.com/the-human-cost-of-the-ashley-madison-hack-is-astronomical-2015-8?r=UK&IR=T&utm_content=bufferf1205&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer" target="_blank">It will take years to count the true human cost of the Ashley Madison hack</a>
+
+<a href="http://elitedaily.com/dating/relationships-are-a-power-struggle/737531/" target="_blank">There Is No Such Thing As Equal Love: Why The One Who Cares Less Always ‘Wins’</a>
