--- a/notes/20151128.md
+++ b/notes/20151128.md
@@ -1,1 +1,30 @@
 Features are the consequence of an effective system.
+
+---
+
+I'm going to get rich off of you getting dumber.
+
+-- sayeth many of our heros
+
+---
+
+<a href="http://www.cio.com/article/2944334/open-source-development/why-the-open-source-business-model-is-a-failure.html" target="_blank">Why the open source business model is a failure</a>
+
+<a href="http://techcrunch.com/2014/02/13/please-dont-tell-me-you-want-to-be-the-next-red-hat/" target="_blank">Why There Will Never Be Another RedHat: The Economics Of Open Source</a>
+
+---
+
+Create top-notch products. Hire maintenance team.
+
+---
+
+<a href="https://en.wikipedia.org/wiki/Business_models_for_open-source_software" target="_blank">Business models for open-source software</a>
+
+---
+
+Science - Consensus through observation
+Quantifiable Science - Consensus through Quantifiable observation
+
+---
+
+Capitalism is anti-innovation.
