--- a/notes/20151211.md
+++ b/notes/20151211.md
@@ -5,3 +5,6 @@
 <a href="http://continuations.com/post/134920840275/capital-is-no-longer-scarce" target="_blank">Capital Is No Longer Scarce</a>
 
 <a href="https://freedom.press/blog/2015/12/preparation-join-us-wars-japan-dismantles-freedom-press" target="_blank">In preparation to join US wars, Japan dismantles freedom of the press</a>
+
+<a href="http://www.adaptnetwork.com/environment-nature/whales-born-before-moby-dick-cruising-ocean-today/" target="_blank">
+Whales Born before ‘Moby Dick’ in 1851 Still Cruising the Ocean Today</a>
