--- a/notes/20151216.md
+++ b/notes/20151216.md
@@ -1,1 +1,59 @@
 Our curiosity is peaked when we are ready to handle abstractions.
+
+I speak to the successive generations.
+
+I speak to spirits.
+
+Our relationships evolving over time.
+
+We are not confident when we don't know who we are.
+
+---
+
+<a href="http://www.infoworld.com/article/2680528/operating-systems/open-source-confronts-ip-issues.html" target="_blank">Open source confronts IP issues</a>
+
+<a href="https://docs.npmjs.com/misc/scripts" target="_blank">npm-scripts - How npm handles the "scripts" field</a>
+
+<a href="https://developers.google.com/v8/get_started?csw=1" target="_blank">Chrome V8 - Getting Started</a>
+
+<a href="https://developers.google.com/v8/embed?csw=1#accessors" target="_blank">Chrome V8 - Embedder's Guide</a>
+
+<a href="http://lisacharlotterost.github.io/2015/12/14/The-Line-between-Data-Vis-And-Data-Art/" target="_blank">The Line between Data Vis and Data Art</a>
+
+<a href="http://www.theguardian.com/us-news/2015/dec/15/facebook-change-controversial-real-name-policy" target="_blank">Facebook adjusts controversial 'real name' policy in wake of criticism</a>
+
+<a href="https://github.com/yahoo/anthelion" target="_blank">yahoo/anthelion</a>
+
+<a href="https://archive.org/stream/GuerillaOpenAccessManifesto/Goamjuly2008_djvu.txt" target="_blank">Guerilla Open Access Manifesto</a>
+
+<a href="http://webmink.com/essays/on-copyright-aggregation/" target="_blank">On Copyright Aggregation</a>
+
+<a href="http://webmink.com/essays/causality/" target="_blank">Direct and Indirect Causality</a>
+
+<a href="http://webmink.com/essays/monetisation/" target="_blank">Open Source Does Not Need Monetising</a>
+
+<a href="http://webmink.com/essays/open-core/" target="_blank">Open Core Is Bad For You</a>
+
+<a href="http://webmink.com/essays/procurement-and-copyright/" target="_blank">Open Source Procurement: Copyright</a>
+
+<a href="http://webmink.com/essays/scorecard/" target="_blank">Organic Software: A Software Freedom Scorecard</a>
+
+<a href="http://webmink.com/essays/reptiles/" target="_blank">Reptiles</a>
+
+<a href="http://webmink.com/essays/wikileaks/" target="_blank">The Internet’s Voltaire Moment</a>
+
+<a href="http://readwrite.com/2014/09/01/open-source-recruitment" target="_blank">The Secret To Hiring Great Developers Is Hiding In Plain Sight</a>
+
+<a href="http://blog.codinghorror.com/how-to-hire-a-programmer/" target="_blank">How to Hire a Programmer</a>
+
+<a href="http://www.negotiations.com/articles/best-alternative/" target="_blank">BATNA - Best Alternative</a>
+
+<a href="http://www.toptal.com/it/what-to-look-out-for-in-software-developer-ndas" target="_blank">What To Look Out For In Software Development NDAs</a>
+
+<a href="https://www.sheehan.com/publications/good-company-newsletter/Software-Agreements-And-The-Derivative-Works-Dilemma--What-Do-You-Really-Own-.aspx" target="_blank">Good Company</a>
+
+<a href="http://www.finnegan.com/resources/articles/articlesdetail.aspx?news=9cbb473b-f87b-47eb-8d4b-0202ad56343a" target="_blank">Understanding the Importance of Derivative Works</a>
+
+<a href="http://www.rosenlaw.com/lj19.htm" target="_blank">Derivative Works</a>
+
+<a href="http://www.linuxjournal.com/article/6366" target="_blank">Derivative Works</a>
