--- a/notes/20160112.md
+++ b/notes/20160112.md
@@ -1,3 +1,9 @@
 <a href="http://www.cam.ac.uk/research/news/cocaine-addiction-scientists-discover-back-door-into-the-brain" target="_blank">Cocaine addiction: Scientists discover ‘back door’ into the brain - See more at: http://www.cam.ac.uk/research/news/cocaine-addiction-scientists-discover-back-door-into-the-brain#sthash.kueNKrEj.dpuf</a>
 
 <a href="http://uk.businessinsider.com/the-downsides-of-collaboration-between-coworkers-2016-1?r=US&IR=T" target="_blank">Researchers say the 'success syndrome' could explain why your best employees are quitting</a>
+
+<a href="http://www.wsj.com/articles/sustainable-investing-goes-mainstream-1452482737" target="_blank">‘Sustainable Investing’ Goes Mainstream - Do-good investing took a step forward in 2015, with Wall Street ramping up interest</a>
+
+<a href="http://techcrunch.com/2016/01/10/the-industrialists-dilemma/" target="_blank">The Industrialist’s Dilemma</a>
+
+<a href="http://superpowers-html5.com/index.en.html" target="_blank">Superpowers - 2D+3D game making for indies. Free and open source, finally.</a>
