--- a/notes/20160127.md
+++ b/notes/20160127.md
@@ -3,3 +3,49 @@
 <a href="https://unicornfree.com/2013/startups-do-not-repeat-do-not-prepare-you-for-a-product-business" target="_blank">Startups Do Not — Repeat, DO NOT — Prepare You to Create Products</a>
 
 <a href="http://www.bloomberg.com/news/articles/2016-01-26/high-speed-firms-now-oversee-almost-all-stocks-at-nyse-floor" target="_blank"></a>
+
+<a href="https://tuvalie.com/fae/?q=Albert%20Einstein" target="_blank">Albert Einstein</a>
+
+<a href="https://docs.npmjs.com/how-npm-works/npm3-nondet" target="_blank">npm3 Non-determinism</a>
+
+<a href="http://jupyter.org/" target="_blank">Jupyter Notebook</a>
+
+<a href="https://m.signalvnoise.com/why-i-work-remotely-hint-it-has-nothing-to-do-with-productivity-34ace30f74fc#.v851a8qnw" target="_blank">Why I work remotely ( hint: it has nothing to do with productivity).</a>
+
+<a href="https://www.msci.com/documents/10199/6547ff32-d337-4c3a-9f01-f8c90f43cb91" target="_blank">2015 ESG Trends to Watch</a>
+
+<a href="https://www.msci.com/esg-indexes" target="_blank">ESG indexes - MSCI</a>
+
+<a href="http://socialstockexchange.com/" target="_blank">Social Stock Exchange</a>
+
+<a href="https://blog.ycombinator.com/basic-income" target="_blank">Basic Income</a>
+
+<a href="https://github.com/blog/2097-improved-commenting-with-markdown" target="_blank">Improved commenting with Markdown</a>
+
+---
+
+the institutions want my soul
+
+they chase me down to suck my soul
+
+---
+
+sometimes you create reasons from coincidences
+
+never waste a good coincidence
+
+---
+
+goto considered harmful, but allow yourself to use goto
+
+---
+
+closed source only matters to middlemen
+
+---
+
+<a href="https://www.leafly.com/news/health/does-cannabis-make-you-grumpy?utm_campaign=Roost&utm_source=Roost&utm_medium=push" target="_blank">Does Cannabis Make You Grumpy?</a>
+
+<a href="http://davidvgalbraith.com/how-i-fixed-atom/" target="_blank">How I fixed Atom</a>
+
+<a href="http://fossforce.com/2016/01/sourceforge-and-slashdot-have-been-sold/" target="_blank">SourceForge and Slashdot Have Been Sold</a>
