--- a/notes/20160223.md
+++ b/notes/20160223.md
@@ -11,4 +11,28 @@ alignment of philosophy
 
 ---
 
-lifestyle
+lifestyle investments
+
+---
+
+<pre>
+not everything needs to evolve
+  components
+</pre>
+
+<pre>
+roman
+systemic (model) expression
+connect with cristian's wife re: environment models
+</pre>
+
+<pre>
+uctx
+  universal context
+</pre>
+
+---
+
+<a href="http://battles.nodegoat.net/viewer.p/23/385/scenario/3/geo/fullscreen" target="_blank">battles.nodegoat.net</a>
+
+<a href="http://dbpedia.org/page/Battle_of_Zhuolu" target="_blank">About: Battle of Zhuolu</a>
