--- a/notes/20160227.md
+++ b/notes/20160227.md
@@ -24,3 +24,5 @@
 Warriors guard Stephen Curry
 
 <a href="http://espn.go.com/nba/story/_/id/14857175/golden-state-warriors-stephen-curry-finds-bashing-retired-stars-annoying" target="_blank">Stephen Curry: Criticism 'starting to get a little annoying'</a>
+
+<a href="http://espn.go.com/nba/story/_/id/14862610/stephen-curry-golden-state-warriors-sets-single-season-3-point-record" target="_blank">Stephen Curry breaks NBA record for most 3-pointers in a season</a>
