updates - notes, politics, revelations, etc.

--- a/notes/20160331.md
+++ b/notes/20160331.md
@@ -7,3 +7,7 @@ the ethical subconsciousness?
   expose interesting patterns in data
 
 measure ethical context
+
+---
+
+<a href="http://www.cnn.com/2016/02/25/politics/hillary-clinton-black-lives-matter-whichhillary/" target="_blank">Black Lives Matter protesters confront Clinton at a fundraiser</a>
