--- a/notes/20170206.md
+++ b/notes/20170206.md
@@ -1,1 +1,9 @@
+<a href="https://www.youtube.com/watch?v=sfgZrRoflCI" target="_blank">Govt Mind Control Technologies with Dr. John Hall</a>
+
+<a href="https://www.youtube.com/watch?v=VNtS7QCjXXk" target="_blank">https://www.youtube.com/watch?v=VNtS7QCjXXk</a>
+
+<a href="https://www.wikiwand.com/en/Alberto_Rivera_(activist)" target="_blank">Alberto Rivera (activist)</a>
+
+<a href="https://www.youtube.com/watch?v=v7iQ03QDEcs" target="_blank">Geoengineering Watch Global Alert News, February 4, 2017 ( Dane Wigington GeoengineeringWatch.org )</a>
+
 <a href="http://www.shomer-tec.com/product/sonic-nausea-1499.cfm" target="_blank">Shoomer Tech</a>
